--- a/style.css
+++ b/style.css
@@ -30,13 +30,12 @@ span {
 
 .container {
     width: 800px;
-    /* height: 800px; */
+    height: 900px;
+    min-height: 900px;
     min-width: 320px;
     display: flex;
-    /* justify-content: center; */
     align-items: center;
     flex-direction: column;
-    /* padding: 0 30px; */
     box-sizing: border-box;
     border: black 5px solid;
     overflow: hidden;
@@ -48,7 +47,7 @@ span {
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding: 38px 0;
+    padding: 50px 0;
     box-sizing: border-box;
 }
 
