--- a/style.css
+++ b/style.css
@@ -6,21 +6,23 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #f5f5f5;
     text-align: center;
     width: 100vw;
     height: 100vh;
-    user-select: none;
     font-size: 16px;
+    padding: 40px 0;
     display: flex;
     justify-content: center;
-    align-items: center;
+    background-color: #131313;
+    user-select: none;
+    color: white;
 }
 
 img {
     width: 200px;
     height: 200px;
     border-radius: 50%;
+    border: white 5px solid;
 }
 
 span {
@@ -34,7 +36,6 @@ span {
     min-height: 900px;
     min-width: 320px;
     display: flex;
-    align-items: center;
     flex-direction: column;
     box-sizing: border-box;
     border: black 5px solid;
@@ -46,8 +47,8 @@ span {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
     padding: 50px 0;
+    gap: 20px;
     box-sizing: border-box;
 }
 
@@ -60,14 +61,7 @@ a:hover {
     text-decoration: none;
 }
 
-.margin0 {
-    background-color: #D7D7D7;
-}
-
 .margin1 {
-    background-color: #FFEAEA;
-}
-
-.margin2 {
-    background-color: #EAF9FF;
+    background-color: white;
+    color: black;
 }
